snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2-sources.jar.sha1
f71cca1cf072d949e0444a9ee86a585c86ba46ec